<resources>
    <string name="app_name">Harmonify</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <string name="tittleHome">Harmonify</string>
    <string name="NameProfile">Salsa Rizki Saputri</string>
    <string name="Nim">L0122147</string>
    <string name="prodiAngkatan">Informatika, 2022</string>
    <string name="fakultas">Fakultas Teknologi Informasi dan Sains Data</string>
    <string name="univ">Universitas Sebelas Maret</string>
    <string name="email">salsarizkisaputri@student.uns.ac.id</string>

    <!--    hhh-->
    <string name="notif">ini notif</string>
    <string name="dasb">ini dashboard</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello_home_fragment">Home Fragment</string>
    <string name="to_profile">Find salsas age!</string>
    <string name="to_category">find another text</string>
    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">Umur salsa 19 tahun</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_sport">Ke fragment Sport</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_home">Ke fragment Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_detail">Detail Fragment</string>

    <string name="greetingstring">Hello, EveryOne! I\'m Salsa!</string>
    <string name="About_Me">Get To Know Me!</string>
    <string name="Desc">Harmonify adalah aplikasi yang menyediakan platform untuk mengeksplorasi dan mendeskripsikan penyanyi favorit Anda. Dengan antarmuka yang ramah pengguna, Anda dapat menemukan informasi mendalam tentang artis, termasuk biografi, genre musik, album terbaru, dan banyak lagi. Harmonify juga memungkinkan pengguna untuk membuat profil pribadi, menyimpan daftar penyanyi favorit, dan berbagi rekomendasi dengan teman-teman mereka. Dengan fokus pada memperluas pengetahuan musik pengguna, Harmonify menjadi teman setia bagi para pecinta musik yang ingin mengeksplorasi lebih jauh tentang artis favorit mereka.</string>
    <string name="button">Detail Information</string>
    <string name="find_me">find me!</string>
    <string name="mypict_desc">first pic</string>
    <string name="title_name">Nama Lengkap</string>
    <string name="full_name">Salsa Rizki Saputri</string>
    <string name="title_nim">Nomor Induk Mahasiswa</string>
    <string name="nim">L0122147</string>
    <string name="title_birthday">Tempat, Tanggal Lahir</string>
    <string name="birthday">Sukoharjo, 27 April 2004</string>
    <string name="share_button">share</string>

    <string name="singer_name">Singer Name</string>
    <string name="description">Description</string>

    <string-array name="data_name">
        <item>Taylor Swift</item>
        <item>Misellia Ikhwan</item>
        <item>Rich Brian</item>
        <item>Nadin Amizah</item>
        <item>Bernadya Ribka</item>
        <item>EXO</item>
        <item>NCT DREAM</item>
        <item>Nicole Zefanya</item>
        <item>Tulus</item>
        <item>Fiersa Besari</item>
    </string-array>

    <string-array name="data_desc">
    <item><![CDATA[I have been listening to her songs since I was around 10 years old, during my elementary school days!
        I used to really like "Red" and "22", but now I think my favorites are "The Way I Loved You," "You Belong with Me," and "Enchanted."
    ]]></item>
        <item><![CDATA[I have known her since we were 13. She was covering Ed Sheeran(s) song "Perfect," and I immediately fell in love with her voice.
        Because we are the same age, thatms when I started idolizing her.
    ]]></item>
        <item><![CDATA[I have idolized him ever since he released his song "Love in My Pocket." He is Indonesian but based in the USA under the 88rising label.
        I knew about him before, but after "Love in My Pocket," I started following him closely. I even learned English because of him!
    ]]></item>
        <item><![CDATA[Of coure, when I started senior high school, two songs by Nadin Amizah became popular, and surprisingly, I loved them even though her music genre usually does not fit my taste!
        Until now, I still love her and her song "Star" the most.
    ]]></item>
        <item><![CDATA[I have really loved her since I found a singing video of her covering the song "I Love You, You'll Know It." Her voice is so unique and calming!
        And then I discovered her song "Lugu," and now I am a big fan of her music!    ]]></item>
        <item><![CDATA[EXO is definitely the boy group with the most stable voices! I adore them! My favorite song is "Walk on Memories"!
        My bias is Baekhyun and Chanyeol! I love their jokes and how fun they are.
    ]]></item>
        <item><![CDATA[NCT DREAM is the cutest group on this list! I love them because I discovered their song "We Go Up" and immediately became a fan of Nana with his pink hair!
        The songs I love the most from them are "Life is Still Going On" and "Beautiful Time."
    ]]></item>
        <item><![CDATA[The first time I saw her was on TikTok with her amazing song "Lose." I started following her and was surprised to find out she is under the 88rising label just like Rich Brian.
        I still love her song "La La Lost You"!
    ]]></item>
        <item><![CDATA[I have been listening to his songs since elementary school! I used to sing his songs all the time and enjoyed his voice so much!
        I loved the song "Sepatu" back then, and nowadays, I am obsessed with "Interaksi."
    ]]></item>
        <item><![CDATA[I fell in love with his song "Waktu yang Salah"! Everyone knows that song. I started following him and discovered that he is a writer, songwriter, and singer!
        So fascinating. And I still love the song "Waktu yang Salah" to this day.
    ]]></item>
    </string-array>


    <integer-array name="data_img">
        <item>@drawable/taylor</item>
        <item>@drawable/misellia</item>
        <item>@drawable/richbrian</item>
        <item>@drawable/nadinamizah</item>
        <item>@drawable/bernadyaribka</item>
        <item>@drawable/exo</item>
        <item>@drawable/nctdream</item>
        <item>@drawable/nikizefanya</item>
        <item>@drawable/tulus</item>
        <item>@drawable/fiersabesari</item>
    </integer-array>

    <string-array name="data_instagram">
        <item>taylorswift</item>
        <item>misellia_</item>
        <item>brianimanuel</item>
        <item>cakecaine</item>
        <item>bernadyaribka</item>
        <item>weareone.exo</item>
        <item>nct_dream</item>
        <item>nikizefanya</item>
        <item>tulusm</item>
        <item>fiersabesari</item>
    </string-array>
</resources>