<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Background_color"
    tools:context=".MainActivity">

    <TextView
        style="@style/title_fix"
        android:id="@+id/greeting"
        android:layout_width="248dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:text="@string/greetingstring"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.732"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/titleHome"
        style="@style/title_fix"
        android:layout_width="206dp"
        android:layout_height="26dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="376dp"
        android:backgroundTintMode="screen"
        android:contentDescription="@string/About_Me"
        android:fadeScrollbars="true"
        android:text="@string/NameProfile"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mypict"
        android:layout_width="258dp"
        android:layout_height="236dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"

        app:srcCompat="@drawable/depan1"
        tools:layout_editor_absoluteY="124dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/nim"
        style="@style/description"
        android:layout_width="208dp"
        android:layout_height="25dp"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:focusableInTouchMode="true"
        android:importantForAccessibility="noHideDescendants"
        android:keepScreenOn="true"
        android:lineSpacingExtra="12dp"
        android:text="@string/Nim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="25dp"
        tools:layout_editor_absoluteY="414dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/prodiAngkatan"
        style="@style/description"
        android:layout_width="202dp"
        android:layout_height="31dp"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:focusableInTouchMode="true"
        android:importantForAccessibility="noHideDescendants"
        android:keepScreenOn="true"
        android:lineSpacingExtra="12dp"
        android:text="@string/prodiAngkatan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="25dp"
        tools:layout_editor_absoluteY="451dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/fakultas"
        style="@style/description"
        android:layout_width="246dp"
        android:layout_height="32dp"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:focusableInTouchMode="true"
        android:importantForAccessibility="noHideDescendants"
        android:keepScreenOn="true"
        android:lineSpacingExtra="12dp"
        android:text="@string/fakultas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="25dp"
        tools:layout_editor_absoluteY="491dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/univ"
        style="@style/description"
        android:layout_width="272dp"
        android:layout_height="31dp"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:focusableInTouchMode="true"
        android:importantForAccessibility="noHideDescendants"
        android:keepScreenOn="true"
        android:lineSpacingExtra="12dp"
        android:text="@string/univ"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="25dp" />

    <TextView
        android:id="@+id/email"
        style="@style/description"
        android:layout_width="267dp"
        android:layout_height="30dp"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:focusableInTouchMode="true"
        android:importantForAccessibility="noHideDescendants"
        android:keepScreenOn="true"
        android:lineSpacingExtra="12dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="25dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="626dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="35dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>